Adds javascript for current weather summary, temperature, humidity and windspeed

--- a/index.html
+++ b/index.html
@@ -37,21 +37,17 @@
 
                 <div class="row">
                   <div class="col-4 mx-2 px-4">
-                    <div class="row city" id="city">
-                      <strong>
+                    <strong> 
+                      <div class="row city" id="city">
                       London
-                      </strong>
-                    </div>
-                    <div class="row date" id="date">
-                      <strong>
+                      </div>
+                      <div class="row date" id="date">
                         Sunday 17:25
-                      </strong>
-                    </div>
-                    <div class="row weather-summary" id="weather-summary">
-                      <strong>
-                        Scattered showers
-                      </strong>  
-                    </div>
+                      </div>
+                      <div class="row weather-summary" id="weather-summary">
+                        Scattered showers  
+                      </div>
+                    </strong>  
                   </div>
                   <div class="col mx-2 pt-3 pl-0 weather-tip">
                     <strong>
@@ -68,7 +64,7 @@
                     <i class="fas fa-cloud-rain"></i>
                     </span>
                     <span class="temperature-and-units">  
-                      <span class="temperature" id="temperature">4</span>
+                      <span class="temperature" id="temperature"></span>
                       <a href="#" class="units" id="celsius-link">°C</a> 
                       <span class="units">|</span>
                       <a href="#" class="units" id="farenheit-link">°F</a>
@@ -93,10 +89,10 @@
                     Low: 8°
                     </div>
                     <div class="row">
-                    <span>Wind: <span id="wind">7</span> km/h</span>
+                    <span>Wind: <span id="wind"></span> km/h</span>
                     </div>
                     <div class="row">
-                    Precipitation: 40%
+                    <span>Humidity: <span id="humidity"></span>%</span>
                     </div>
                   </div>                      
                 </div>
