Adds java script for current date and time

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                       <div class="row city" id="city">
                       London
                       </div>
-                      <div class="row date" id="date">
-                        Sunday 17:25
+                      <div class="row date">
+                        <span>Last updated: <span id = "date"></span> </span>
                       </div>
                       <div class="row weather-summary" id="weather-summary">
                         Scattered showers  
