--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
                 <br />
 
                 <div class="row">
-                  <div class="col-4 px-4 pt-2 mx-2 todays-weather border rounded">
-                    <span class="today-icon">                     
-                    <i class="fas fa-cloud-rain"></i>
-                    </span>
+                  <div class="col-4 px-4 pt-2 mx-2 todays-weather border rounded">                  
+                    <img
+                    src="";
+                    alt="Clear"
+                    class="today-icon"
+                    id="icon"
+                    />
                     <span class="temperature-and-units">  
                       <span class="temperature" id="temperature"></span>
                       <a href="#" class="units" id="celsius-link">°C</a> 
