Adds unit conversion

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     />
                     <span class="temperature-and-units">  
                       <span class="temperature" id="temperature"></span>
-                      <a href="#" class="units" id="celsius-link">°C</a> 
+                      <a href="#" class="units active" id="celsius-link">°C</a> 
                       <span class="units">|</span>
-                      <a href="#" class="units" id="farenheit-link">°F</a>
+                      <a href="#" class="units" id="fahrenheit-link">°F</a>
                     </span>
                   </div>       
                   
