Updates link to github

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </form>
             </div>
         </div>
-        <a href="https://github.com/Annalouise643/weather-app">Open-source code</a> by Anna Bray
+        <a href="https://github.com/Annalouise643/vanilla-weather-app" target="_blank">Open-source code</a> by Anna Bray
       </div>
     </div>
   <script src="src/app.js"></script>
