--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                    <div class="col-2">
                    <input type="submit" value="Search" class="btn btn-secondary py-1 px-3" />
                    </div>
+
+                   <div class="col-2">
+                    <button type="button" class="btn btn-secondary py-1 px-3" id="current-location-button" >Current</button>
+                  </div>
+
                 </div>
 
                 <div class="row">
